--- a/template.yml
+++ b/template.yml
@@ -53,13 +53,16 @@ Resources:
       OptionSettings:
       - Namespace: aws:elasticbeanstalk:environment
         OptionName: EnvironmentType
-        Value: SingleInstance
+        Value: LoadBalanced
       - Namespace: aws:elasticbeanstalk:environment
         OptionName: ServiceRole
         Value: !Ref 'EBTrustRole'
       - Namespace: aws:elasticbeanstalk:healthreporting:system
         OptionName: SystemType
         Value: enhanced
+      - Namespace: aws:elasticbeanstalk:environment
+        OptionName: LoadBalancerType
+        Value: application
       SolutionStackName: !Ref 'SolutionStackName'
   EBEnvironment:
     Description: The AWS Elastic Beanstalk deployment group where the application is deployed, which is made up of the Amazon EC2 Linux instances launched for this project.
